# cvxrisk

./: .buildinfo  .env  .gitignore  .pre-commit-config.yaml  .rhiza.env  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  create_kernel.sh  cvxrisk-1.0.0-py3-none-any.whl  cvxrisk-1.1.0-py3-none-any.whl  cvxrisk-1.1.1-py3-none-any.whl  cvxrisk-1.2.0-py3-none-any.whl  cvxrisk-1.2.1-py3-none-any.whl  genindex.html  introduction.md  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  search.html  searchindex.js  setup.cfg  taskfile.yml
.claude/commands/: book.md
.clusterfuzzlite/: Dockerfile  build.sh
.devcontainer/: devcontainer.json  startup.sh
.github/: dependabot.yml  renovate.json  template.yml
.github/rhiza/: template.yml
.github/workflows/: _devcontainer.yml  book.yml  ci.yml  codeql.yml  copilot-setup-steps.yml  deptry.yml  devcontainer.yml  marimo.yml  pre-commit.yml  release.yml  rhiza_benchmark.yml  rhiza_benchmarks.yml  rhiza_book.yml  rhiza_ci.yml  rhiza_codeql.yml  rhiza_fuzzing.yml  rhiza_marimo.yml  rhiza_mutation.yml  rhiza_release.yml  rhiza_scorecard.yml  rhiza_sync.yml  rhiza_validate.yml  rhiza_weekly.yml  setup.yml  structure.yml
.junie/: guidelines.md
.rhiza/: history  template.yml
.rhiza/make.d/: 01-custom-env.mk  quality.mk  test.mk
.rhiza/utils/: suppression_audit.py  suppression_parse.py  suppression_report.py
_sources/docs/: index.md
actions/environment/: action.yml
artifacts/lines/: lines.txt
artifacts/sphinx/: .buildinfo  genindex.html  index.html  license.html  objects.inv  py-modindex.html  searchindex.js
book/: .buildinfo  _config.yml  _toc.yml  genindex.html  objects.inv  search.html  searchindex.js
book/docs/: api.html  api.md  index.html  index.md  marimo.html  marimo.md  nb.html  reports.html  reports.md
book/marimo/: demo.py  factormodel.py  large.py  sample.py  tilting.py
book/sphinx/: conf.py
cvx/linalg/: __init__.py  cholesky.py  pca.py  valid.py
cvx/portfolio/: __init__.py  min_risk.py
cvx/random/: __init__.py  rand_cov.py
cvx/risk/: __init__.py  bounds.py  model.py
cvxrisk/: __init__.py
cvxrisk/cvar/: __init__.py  cvar.py
cvxrisk/factor/: __init__.py  factor.py
cvxrisk/linalg/: __init__.py  pca.py
cvxrisk/portfolio/: __init__.py  min_risk.py
cvxrisk/random/: __init__.py  rand_cov.py
cvxrisk/sample/: __init__.py
docs/: CUSTOMIZATION.md  api.html  index.html  models.md  nb.html  reports.html
docs/notebooks/: demo.html  difference.html  factormodel.html  large.html  monkey.html  pairs.html  quantstats.html  sample.html
marimo/: convert.sh  demo.html  demo.md  demo.py  factormodel.html  factormodel.md  factormodel.py  large.html  large.md  large.py  sample.html  sample.md  sample.py  tilting.html
marimo-html/: demo.html  factormodel.html  large.html  sample.html
marimo/marimo_html/: factormodel.html
pdoc/: cvx.html  search.js
pdoc/cvx/: portfolio.html  random.html  risk.html
sphinx/: .buildinfo  genindex.html  index.html  license.html  objects.inv  py-modindex.html  search.html  searchindex.js
sphinx/.doctrees/: environment.pickle  index.doctree  license.doctree
sphinx/_modules/: index.html
sphinx/autoapi/: index.html
src/cvx/: __init__.py
src/cvxrisk/: __init__.py
src/tests/: __init__.py  conftest.py  test_versions.py
stubs/clarabel/: __init__.pyi
taskfiles/: build.yml
tests/: __init__.py  conftest.py  test_core_functionality.py  test_docstrings.py  test_readme_doctests.py  test_versions.py
tests/benchmarks/: conftest.py  test_benchmarks.py
tests/core/: test_bounds.py  test_core_contracts.py  test_model.py
tests/coverage/: coverage.info  coverage.json  coverage.xml
tests/fuzz/: conftest.py  fuzz_risk_models.py  fuzz_sample_risk.py
tests/html-coverage/: class_index.html  d_00144acbd1f42640___init___py.html  d_00144acbd1f42640_cvar_py.html  d_05ee634ac241583b___init___py.html  d_05ee634ac241583b_bounds_py.html  d_05ee634ac241583b_model_py.html  d_3ba1d950ac8fe2c0___init___py.html  d_3ba1d950ac8fe2c0_factor_py.html  d_63f994e4b5c6c5e7___init___py.html  d_63f994e4b5c6c5e7_min_risk_py.html  d_6b6b8e0d310593fd___init___py.html  d_6b6b8e0d310593fd_cholesky_py.html  d_6b6b8e0d310593fd_pca_py.html  d_6b6b8e0d310593fd_valid_py.html  d_70c0495403c02001___init___py.html  d_70c0495403c02001_rand_cov_py.html  d_d22f823fac8de284___init___py.html  d_d22f823fac8de284_sample_py.html  function_index.html  index.html  status.json  z_00144acbd1f42640___init___py.html  z_00144acbd1f42640_cvar_py.html  z_05ee634ac241583b___init___py.html  z_05ee634ac241583b_bounds_py.html  z_05ee634ac241583b_model_py.html  z_3ba1d950ac8fe2c0___init___py.html  z_3ba1d950ac8fe2c0_factor_py.html  z_63f994e4b5c6c5e7___init___py.html  z_63f994e4b5c6c5e7_min_risk_py.html  z_70c0495403c02001___init___py.html  z_70c0495403c02001_rand_cov_py.html  z_baf40222e63b1267___init___py.html  z_baf40222e63b1267_cholesky_py.html  z_baf40222e63b1267_pca_py.html  z_baf40222e63b1267_valid_py.html  z_d22f823fac8de284___init___py.html  z_d22f823fac8de284_sample_py.html
tests/html-report/: report.html
tests/linalg/: test_pca.py  test_valid.py
tests/risk/: test_contracts.py  test_cvxpy_equivalence.py  test_failure_paths.py  test_integration.py  test_message_contracts.py  test_properties.py  test_reference_solvers.py
tests/test_linalg/: __init__.py  test_cholesky.py  test_pca.py  test_valid.py
tests/test_portfolio/: test_min_risk.py
tests/test_rand/: test_random.py
tests/test_random/: __init__.py  test_random.py
tests/test_rhiza/: test_docstrings.py
tests/test_risk/: __init__.py  minvar.py  test_bounds.py  test_simple.py
tests_3.11/coverage/: coverage.info  coverage.json  coverage.xml
tests_3.11/html-coverage/: d_00144acbd1f42640___init___py.html  d_00144acbd1f42640_cvar_py.html  d_05ee634ac241583b___init___py.html  d_05ee634ac241583b_bounds_py.html  d_05ee634ac241583b_model_py.html  d_3ba1d950ac8fe2c0___init___py.html  d_3ba1d950ac8fe2c0_factor_py.html  d_63f994e4b5c6c5e7___init___py.html  d_63f994e4b5c6c5e7_min_risk_py.html  (+9 more)
(+392 files in other folders)
