# Main project metadata and configuration
[project]
name = "cvxrisk"
version = "1.5.1"
description = "Simple riskengine for portfolio optimization"
readme = "README.md"
requires-python = ">=3.11"
# Private :: Do Not Upload (prevents rhiza_release.yml from publishing to PyPI)
# List of core dependencies required for the package to function
dependencies = [
    "clarabel>=0.11.1",    # Conic interior-point solver (replaces cvxpy-base)
    "cvx-linalg>=0.6.1",   # Linear algebra utilities
    "numpy>=2.3.0",        # Numerical computing library for array operations
    "scipy>=1.17.1",       # Scientific computing (sparse matrix support)
]
license = {text = "MIT"}
authors = [{name = "Thomas Schmelzer", email = "thomas.schmelzer@gmail.com"}]

# Project URLs for documentation, repository, etc.
[project.urls]
Homepage = "https://github.com/cvxgrp/cvxrisk"
Repository = "https://github.com/cvxgrp/cvxrisk"

# Optional dependencies that can be installed with extras (e.g., pip install cvxrisk[dev])
[dependency-groups]
# Development dependencies for testing, linting, and documentation
dev = [
    "jquantstats>=0.8.2",  # Portfolio performance analysis and reporting
    "marimo>=0.23.6",      # Interactive notebook environment
    "polars>=1.34.0",      # Fast DataFrame library (alternative to pandas)
    "plotly>=6.5",
]
# Test dependencies
test = [
    "hypothesis>=6.100",    # Property-based testing
    "mutmut>=2.5,<3",       # Mutation testing (2.x matches the CLI flags used by `make mutation`)
    "pytest>=9.0",
    "pytest-cov>=7.0",
    "pytest-mock>=3.0",
    "pytest-timeout>=2.3",  # Enforces the per-test timeout configured in pytest.ini
]
# Lint dependencies
lint = [
    "pre-commit>=4.0",
]
# Benchmark dependencies – install with: uv sync --group benchmark
benchmark = [
    "cvxpy-base>=1.8.2",    # Old cvxpy-based approach for comparison
    "pytest-benchmark>=5.1", # pytest plugin for timing benchmarks
]

# Build system configuration
[build-system]
requires = ["hatchling"]  # Hatchling is used as the build backend
build-backend = "hatchling.build"

# Hatch configuration for building the package
[tool.hatch.build.targets.wheel]
packages = ["src/cvx"]  # Only include the cvx package in the wheel

# Deptry configuration for dependency checking
# Map package names to their actual module names to suppress warnings
[tool.deptry.package_module_name_map]
numpy = "numpy"
clarabel = "clarabel"
cvx-linalg = "cvx"
scipy = "scipy"
marimo = "marimo"
plotly = "plotly"
polars = "polars"

# Rule ignores for specific dependencies
[tool.deptry.per_rule_ignores]
DEP001 = ["cvx", "sklearn"]  # Ignore missing imports (these are provided by other packages)
DEP002 = ["scikit-learn"]

# ty type checker configuration
[tool.ty.environment]
extra-paths = ["stubs"]
